--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,21 @@
 {
   "name": "Calculadora de Stamina",
   "short_name": "Stamina",
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#1e1e2f",
   "theme_color": "#6c63ff",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ]
 }
+
