Modify manifest.json for updated paths and scope
Updated start_url and scope for the application. Changed icon paths to include '/stamina/'.

--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,21 @@
 {
   "name": "Calculadora de Stamina",
   "short_name": "Stamina",
-  "start_url": "/",
+  "start_url": "/stamina/",
+  "scope": "/stamina/",
   "display": "standalone",
   "background_color": "#1e1e2f",
   "theme_color": "#6c63ff",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/stamina/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/stamina/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ]
 }
-
